<resources>
    <string name="app_name">Easy Backup</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register</string>
    <string name="prompt_account">Account</string>
    <string name="register_welcome">Welcome Registration</string>
    <string name="register_account_prompt">Please use Email</string>
    <string name="register_pwd">Password</string>
    <string name="register">REGISTER</string>
    <string name="joke">checking is regarded as agree to our terms</string>
    <string name="joke2">checking is agree our terms</string>
    <string name="http_fail">There is a problem with the current network</string>
    <string name="account_exist">Account already exists</string>
    <string name="exit_user">退出账号</string>
    <string name="account_manager">账户管理</string>
    <string name="contacts_backup">联系人备份</string>
    <string name="SMS_backup">短信备份</string>
    <string name="one_backup">一键备份</string>
    <string name="uploadFail">上传失败</string>
    <string name="network_is_bad">网络错误！</string>
    <string name="local_contacts">本地通讯录</string>
    <string name="resume_contact">恢复通讯录</string>

    <drawable name="clr_normal">#585cde</drawable>
    <drawable name="clr_pressed">#580eee</drawable>
</resources>
