<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_welcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"/>
    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20sp"
                android:text="@string/prompt_account"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/edit_register_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:ems="10"
                android:hint="@string/register_account_prompt"
                android:padding="5sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20sp"
                android:text="@string/register_pwd"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/edit_register_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="5sp"/>
        </TableRow>

    </TableLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <Button
            android:id="@+id/register_button"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:text="@string/register"
            android:background="#585cde"
            android:textColor="#fefcfc"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/joke"/>
    </LinearLayout>

</LinearLayout>

